# filemanagement_storage_service

./: AGENTS.md  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  hisysevent.yaml  knowledge.md  ohos.build  storage_service_aafwk.gni
services/storage_daemon/: BUILD.gn  EnumDaemon.idl  IStorageDaemon.idl  config.txt  disk_config  main.cpp  sdc.cpp  storage_daemon.cfg  storage_mount_info.json  storage_user_path.json  usb_config.para  usb_config.para.dac
services/storage_daemon/client/: storage_daemon_client.cpp
services/storage_daemon/crypto/: BUILD.gn
services/storage_daemon/gphotofs/: BUILD.gn
services/storage_daemon/libfscrypt/: BUILD.gn
services/storage_daemon/mock/: base_key_mock.cpp  common_utils_mock.cpp  disk_func_mock.cpp  disk_utils_mock.cpp  el5_filekey_manager_kit_mock.cpp  fbex_mock.cpp  file_utils_mock.cpp  fscrypt_control_mock.cpp  fscrypt_key_v2_mock.cpp  iam_client_mock.cpp  key_control_mock.cpp  library_func_mock.cpp  mount_manager_mock.cpp  parameter_mock.cpp  storage_manager_client.cpp  storage_manager_client_mock.cpp  user_idm_client_impl_mock.cpp  user_manager_mock.cpp
services/storage_daemon/mtpfs/: BUILD.gn
services/storage_daemon/observer/: appstate_observer.cpp
services/storage_daemon/quota/: quota_manager.cpp
services/storage_daemon/utils/: cmd_utils.cpp  disk_utils.cpp  file_utils.cpp  hi_audit.cpp  memory_reclaim_manager.cpp  mount_argument_utils.cpp  redaction_utils.cpp  set_flag_utils.cpp  storage_radar.cpp  storage_statistics_radar.cpp  storage_utils.cpp  storage_xcollie.cpp  string_utils.cpp  zip_util.cpp  zip_utils.cpp
services/storage_manager/: BUILD.gn  IStorageManager.idl  IUeceActivationCallback.idl  smc.cpp  storage_manager.cfg  storage_manager_config.para  storage_manager_config.para.dac
services/storage_manager/account_subscriber/: account_subscriber.cpp
services/storage_manager/client/: storage_manager_client.cpp
services/storage_manager/common_event/: common_event_service.cpp  storage_common_event_subscriber.cpp
services/storage_manager/crypto/: filesystem_crypto.cpp
services/storage_manager/dfx_report/: storage_dfx_reporter.cpp
services/storage_manager/mock/: config_policy_utils.cpp  datashare_helper.cpp  datashare_result_set.cpp  disk_manager_client_mock.cpp  message_parcel_mock.cpp  mock_parameters.cpp  storage_daemon_communication_mock.cpp  storage_daemon_proxy_mock.cpp  storage_deamon_communication_mock.cpp  storage_manager_proxy_mock.cpp  storage_rdb_adapter_mock.cpp  storage_status_manager_mock.cpp  storage_status_service_mock.cpp
services/storage_manager/sa_profile/: 5003.json  5003.xml  BUILD.gn
services/storage_space_manager/test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/bundlestats_fuzzer/: BUILD.gn  bundlestats_fuzzer.cpp
test/fuzztest/cjstoragestatusservice_fuzzer/: BUILD.gn  cjstoragestatusservice_fuzzer.cpp  cjstoragestatusservice_fuzzer.h
test/fuzztest/disk_fuzzer/: BUILD.gn  disk_fuzzer.cpp  project.xml
test/fuzztest/extbundlestats_fuzzer/: BUILD.gn  extbundlestats_fuzzer.cpp  extbundlestats_fuzzer.h
test/fuzztest/filesystemcrypto_fuzzer/: BUILD.gn  filesystemcrypto_fuzzer.cpp  filesystemcrypto_fuzzer.h
test/fuzztest/filesystemcryptoactiveuserkey_fuzzer/: BUILD.gn  filesystemcryptoactiveuserkey_fuzzer.cpp  filesystemcryptoactiveuserkey_fuzzer.h
test/fuzztest/filesystemcryptodeleteappkey_fuzzer/: BUILD.gn  filesystemcryptodeleteappkey_fuzzer.cpp  filesystemcryptodeleteappkey_fuzzer.h
test/fuzztest/filesystemcryptodeleteuserkey_fuzzer/: BUILD.gn  filesystemcryptodeleteuserkey_fuzzer.cpp  filesystemcryptodeleteuserkey_fuzzer.h
test/fuzztest/filesystemcryptogenerateappkey_fuzzer/: BUILD.gn  filesystemcryptogenerateappkey_fuzzer.cpp  filesystemcryptogenerateappkey_fuzzer.h
test/fuzztest/filesystemcryptogetlockscreenstatus_fuzzer/: BUILD.gn  filesystemcryptogetlockscreenstatus_fuzzer.cpp  filesystemcryptogetlockscreenstatus_fuzzer.h
test/fuzztest/filesystemcryptoinactiveuserkey_fuzzer/: BUILD.gn  filesystemcryptoinactiveuserkey_fuzzer.cpp  filesystemcryptoinactiveuserkey_fuzzer.h
test/fuzztest/filesystemcryptolockuserscreen_fuzzer/: BUILD.gn  filesystemcryptolockuserscreen_fuzzer.cpp  filesystemcryptolockuserscreen_fuzzer.h
test/fuzztest/filesystemcryptounlockuserscreen_fuzzer/: BUILD.gn  filesystemcryptounlockuserscreen_fuzzer.cpp  filesystemcryptounlockuserscreen_fuzzer.h
test/fuzztest/filesystemcryptoupdatekeycontext_fuzzer/: BUILD.gn  filesystemcryptoupdatekeycontext_fuzzer.cpp  filesystemcryptoupdatekeycontext_fuzzer.h
test/fuzztest/filesystemcryptoupdateuserauth_fuzzer/: BUILD.gn  filesystemcryptoupdateuserauth_fuzzer.cpp  filesystemcryptoupdateuserauth_fuzzer.h
test/fuzztest/fileutils_fuzzer/: BUILD.gn  fileutils_fuzzer.cpp
test/fuzztest/fscryptutils_fuzzer/: BUILD.gn  fscryptutils_fuzzer.cpp
test/fuzztest/keycontrol_fuzzer/: BUILD.gn  keycontrol_fuzzer.cpp
test/fuzztest/keycontroladdkey_fuzzer/: BUILD.gn  keycontroladdkey_fuzzer.cpp  keycontroladdkey_fuzzer.h
test/fuzztest/keycontroladdkeyex_fuzzer/: BUILD.gn  keycontroladdkeyex_fuzzer.cpp  keycontroladdkeyex_fuzzer.h
test/fuzztest/keycontrolgetfscryptversion_fuzzer/: BUILD.gn  keycontrolgetfscryptversion_fuzzer.cpp  keycontrolgetfscryptversion_fuzzer.h
test/fuzztest/keycontrolgetkeyringid_fuzzer/: BUILD.gn  keycontrolgetkeyringid_fuzzer.cpp  keycontrolgetkeyringid_fuzzer.h
test/fuzztest/keycontrolgetpolicy_fuzzer/: BUILD.gn  keycontrolgetpolicy_fuzzer.cpp  keycontrolgetpolicy_fuzzer.h
test/fuzztest/keycontrolhasfscryptsyspara_fuzzer/: BUILD.gn  keycontrolhasfscryptsyspara_fuzzer.cpp  keycontrolhasfscryptsyspara_fuzzer.h
test/fuzztest/keycontrolloadversion_fuzzer/: BUILD.gn  keycontrolloadversion_fuzzer.cpp  keycontrolloadversion_fuzzer.h
test/fuzztest/keycontrolsearch_fuzzer/: BUILD.gn  keycontrolsearch_fuzzer.cpp  keycontrolsearch_fuzzer.h
test/fuzztest/keycontrolunlink_fuzzer/: BUILD.gn  keycontrolunlink_fuzzer.cpp  keycontrolunlink_fuzzer.h
tools/ohos-storage-manager/: BUILD.gn  SKILL.md  config.json  ohos-storage-manager_report.md  ohos-storageManager.json
(+1419 files in other folders)
