# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  storage_service_graphic = true
  storage_service_user_crypto_manager = true
  storage_service_external_storage_manager = true
  storage_service_storage_statistics_manager = true
  storage_service_crypto_test = false
  storage_service_external_storage_qos_trans = false
  storage_service_user_file_sharing = true
  storage_service_fstools = true
  storage_service_media_fuse = true
  storage_service_cloud_fuse = true
  storage_service_enable_fscrypt_data_reliability_option = false

  storage_service_el5_filekey_manager =
      defined(global_parts_info) &&
      defined(global_parts_info.accesscontrol_el5_filekey_policy)

  enable_user_auth_framework =
      defined(global_parts_info) &&
      defined(global_parts_info.useriam_user_auth_framework)

  enable_screenlock_manager = defined(global_parts_info) &&
                              defined(global_parts_info.theme_screenlock_mgr)

  support_open_source_libmtp = defined(global_parts_info) &&
                               defined(global_parts_info.open_source_libmtp) &&
                               defined(global_parts_info.thirdparty_libusb) &&
                               defined(global_parts_info.thirdparty_libfuse)
  storage_service_dfs_filemanager = defined(global_parts_info) &&
                                    defined(global_parts_info.filemanagement_dfs_service)
  enable_tee_client = !is_emulator
  enable_huks_hdi = !is_emulator
}

storage_manager_path =
    "//foundation/filemanagement/storage_service/services/storage_manager"
storage_daemon_path =
    "//foundation/filemanagement/storage_service/services/storage_daemon"
storage_interface_path =
    "//foundation/filemanagement/storage_service/interfaces"
storage_service_common_path =
    "//foundation/filemanagement/storage_service/services/common"
storage_service_path = "//foundation/filemanagement/storage_service"

if ("${target_platform}" == "pc" || "${target_platform}" == "2in1" || "${target_platform}" == "tablet") {
  pc_device_enable = true
} else {
  pc_device_enable = false
}
